feat: Add Letta compatibility and comprehensive documentation
Major Changes:
- Fixed critical Letta compatibility issue: renamed 'id' parameter to 'content_id'
- Created bookstack_content_crud tool with simplified action-based interface
- Implemented aggressive response truncation to prevent JSON-RPC errors
- Added request_heartbeat parameter support for all tools

New Tools:
- bookstack_content_crud: Unified CRUD with 16 operations (read/create/update/delete for page/book/chapter/shelf)
- Simplified batch operations with strict JSON schema compliance

Documentation:
- docs/LETTA_COMPATIBILITY.md: Comprehensive Letta requirements guide
- docs/LETTA_FIX_SUMMARY.md: Detailed problem analysis and resolution
- docs/TROUBLESHOOTING.md: Common issues and solutions
- Updated README.md with Letta compatibility notice

Technical Improvements:
- Response truncation: 1000 char strings, 50 item arrays, 10 level depth
- Error handling: Returns structured error objects instead of exceptions
- Schema compliance: Removed free-form objects, simplified to JSON strings
- Added explicit keyword-only parameter passing

Fixes:
- Resolved 'id' reserved keyword causing tool hangs in Letta
- Fixed missing required arguments in _build_content_operation calls
- Improved JSON schema strict mode compliance
- Added additionalProperties: False to batch item schemas

Testing:
- All 16 CRUD operations verified working in Letta
- Response size limits tested and confirmed
- Error handling validated with edge cases
- Schema warnings documented (FastMCP limitation, non-functional)

Breaking Changes:
- bookstack_manage_content renamed to bookstack_content_crud
- Parameter 'id' renamed to 'content_id' across all tools
- 'data' parameter now only accepts JSON strings (not objects)

This commit makes the BookStack MCP server fully compatible with Letta
while maintaining compatibility with other MCP clients.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "mcp-framework-server",
   "version": "0.0.1",
-  "description": "mcp-framework-server MCP server",
+  "description": "⚠️ DEPRECATED: TypeScript MCP server - Use Python FastMCP server in fastmcp_server/ instead",
+  "deprecated": "This TypeScript server is deprecated. Please use the Python FastMCP server located in the fastmcp_server/ directory.",
   "type": "module",
   "bin": {
     "mcp-framework-server": "./dist/index.js"
